[package]
name = "mary-cache"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-types = "0.10.1"
prost = "0.10"
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.7.2", features = ["compression"] }
hashbrown = "0.12.1"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["prost", "compression"] }